(WIP) Cmd Line frontend implementation